// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XUIAutocompleterEmptyState /> should change the icon when the name is passed to iconPath 1`] = `
<div
  className="xui-u-flex xui-padding-vertical-large xui-u-flex-vertical xui-u-flex-verticallycentered xui-textcolor-muted"
  data-automationid={undefined}
  id={undefined}
>
  <svg
    className="xui-icon xui-icon-large"
    data-automationid={undefined}
    focusable="false"
    style={null}
    viewBox="0 0 30 30"
  >
    <path
      d="m 20,11 0,-2 -10,0 0,2 4,5 0,4 2,0 0,-4 z"
      role="presentation"
      transform={undefined}
    />
  </svg>
  No results found
</div>
`;

exports[`<XUIAutocompleterEmptyState /> should include an icon that defaults to search 1`] = `
<div
  className="xui-u-flex xui-padding-vertical-large xui-u-flex-vertical xui-u-flex-verticallycentered xui-textcolor-muted"
  data-automationid={undefined}
  id={undefined}
>
  <svg
    className="xui-icon xui-icon-large"
    data-automationid={undefined}
    focusable="false"
    style={null}
    viewBox="0 0 30 30"
  >
    <path
      d="M18.8929126,17.4786991 C19.5903306,16.4982449 20,15.2980382 20,14 C20,10.68 17.32,8 14,8 C10.68,8 8,10.68 8,14 C8,17.32 10.68,20 14,20 C15.2980382,20 16.4982449,19.5903306 17.4786991,18.8929126 L21.4142136,22.8284271 L22.8284271,21.4142136 L18.8929126,17.4786991 Z M14,18.5 C11.51,18.5 9.5,16.49 9.5,14 C9.5,11.51 11.51,9.5 14,9.5 C16.49,9.5 18.5,11.51 18.5,14 C18.5,16.49 16.49,18.5 14,18.5 Z"
      role="presentation"
      transform={undefined}
    />
  </svg>
  No results found
</div>
`;

exports[`<XUIAutocompleterEmptyState /> should render an automation id when passed in the qaHook prop 1`] = `
<div
  className="xui-u-flex xui-padding-vertical-large xui-u-flex-vertical xui-u-flex-verticallycentered xui-textcolor-muted"
  data-automationid="test-qahook"
  id={undefined}
>
  <svg
    className="xui-icon xui-icon-large"
    data-automationid={undefined}
    focusable="false"
    style={null}
    viewBox="0 0 30 30"
  >
    <path
      d="M18.8929126,17.4786991 C19.5903306,16.4982449 20,15.2980382 20,14 C20,10.68 17.32,8 14,8 C10.68,8 8,10.68 8,14 C8,17.32 10.68,20 14,20 C15.2980382,20 16.4982449,19.5903306 17.4786991,18.8929126 L21.4142136,22.8284271 L22.8284271,21.4142136 L18.8929126,17.4786991 Z M14,18.5 C11.51,18.5 9.5,16.49 9.5,14 C9.5,11.51 11.51,9.5 14,9.5 C16.49,9.5 18.5,11.51 18.5,14 C18.5,16.49 16.49,18.5 14,18.5 Z"
      role="presentation"
      transform={undefined}
    />
  </svg>
  No results found
</div>
`;

exports[`<XUIAutocompleterEmptyState /> should render an id when passed in the id prop 1`] = `
<div
  className="xui-u-flex xui-padding-vertical-large xui-u-flex-vertical xui-u-flex-verticallycentered xui-textcolor-muted"
  data-automationid={undefined}
  id="test-id"
>
  <svg
    className="xui-icon xui-icon-large"
    data-automationid={undefined}
    focusable="false"
    style={null}
    viewBox="0 0 30 30"
  >
    <path
      d="M18.8929126,17.4786991 C19.5903306,16.4982449 20,15.2980382 20,14 C20,10.68 17.32,8 14,8 C10.68,8 8,10.68 8,14 C8,17.32 10.68,20 14,20 C15.2980382,20 16.4982449,19.5903306 17.4786991,18.8929126 L21.4142136,22.8284271 L22.8284271,21.4142136 L18.8929126,17.4786991 Z M14,18.5 C11.51,18.5 9.5,16.49 9.5,14 C9.5,11.51 11.51,9.5 14,9.5 C16.49,9.5 18.5,11.51 18.5,14 C18.5,16.49 16.49,18.5 14,18.5 Z"
      role="presentation"
      transform={undefined}
    />
  </svg>
  No results found
</div>
`;

exports[`<XUIAutocompleterEmptyState /> should render any children after the icon 1`] = `
<div
  className="xui-u-flex xui-padding-vertical-large xui-u-flex-vertical xui-u-flex-verticallycentered xui-textcolor-muted"
  data-automationid={undefined}
  id={undefined}
>
  <svg
    className="xui-icon xui-icon-large"
    data-automationid={undefined}
    focusable="false"
    style={null}
    viewBox="0 0 30 30"
  >
    <path
      d="M18.8929126,17.4786991 C19.5903306,16.4982449 20,15.2980382 20,14 C20,10.68 17.32,8 14,8 C10.68,8 8,10.68 8,14 C8,17.32 10.68,20 14,20 C15.2980382,20 16.4982449,19.5903306 17.4786991,18.8929126 L21.4142136,22.8284271 L22.8284271,21.4142136 L18.8929126,17.4786991 Z M14,18.5 C11.51,18.5 9.5,16.49 9.5,14 C9.5,11.51 11.51,9.5 14,9.5 C16.49,9.5 18.5,11.51 18.5,14 C18.5,16.49 16.49,18.5 14,18.5 Z"
      role="presentation"
      transform={undefined}
    />
  </svg>
  Example Child Text
</div>
`;

exports[`<XUIAutocompleterEmptyState /> should render extra classes on the root node when passed in the classname prop 1`] = `
<div
  className="xui-u-flex xui-padding-vertical-large xui-u-flex-vertical xui-u-flex-verticallycentered xui-textcolor-muted test-class"
  data-automationid={undefined}
  id={undefined}
>
  <svg
    className="xui-icon xui-icon-large"
    data-automationid={undefined}
    focusable="false"
    style={null}
    viewBox="0 0 30 30"
  >
    <path
      d="M18.8929126,17.4786991 C19.5903306,16.4982449 20,15.2980382 20,14 C20,10.68 17.32,8 14,8 C10.68,8 8,10.68 8,14 C8,17.32 10.68,20 14,20 C15.2980382,20 16.4982449,19.5903306 17.4786991,18.8929126 L21.4142136,22.8284271 L22.8284271,21.4142136 L18.8929126,17.4786991 Z M14,18.5 C11.51,18.5 9.5,16.49 9.5,14 C9.5,11.51 11.51,9.5 14,9.5 C16.49,9.5 18.5,11.51 18.5,14 C18.5,16.49 16.49,18.5 14,18.5 Z"
      role="presentation"
      transform={undefined}
    />
  </svg>
  No results found
</div>
`;
